--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "devDependencies": {
-    "vitepress": "^1.2.2"
+    "@algolia/client-search": "^4.23.3",
+    "algoliasearch": "^4.23.3",
+    "search-insights": "^2.14.0",
+    "vitepress": "^1.2.2",
+    "vue": "^3.4.27"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
