--- a/package.json
+++ b/package.json
@@ -1,4 +1,26 @@
 {
+  "dependencies": {
+    "@algolia/autocomplete-core": "^1.9.3",
+    "@algolia/autocomplete-plugin-algolia-insights": "^1.9.3",
+    "@docsearch/react": "^3.6.0",
+    "@mdi/font": "^7.4.47",
+    "@notionhq/client": "^2.2.15",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/devtools-api": "^7.2.1",
+    "@vueuse/core": "^10.10.0",
+    "@vueuse/integrations": "^10.10.0",
+    "@vueuse/shared": "^10.10.0",
+    "notion-to-md": "^3.1.1",
+    "vue": "^3.0.0",
+    "vue-demi": "^0.12.1",
+    "vuetify": "^3.6.0-beta.0.0"
+  },
+  "peerDependencies": {
+    "@algolia/client-search": "^4.0.0",
+    "algoliasearch": "^4.0.0",
+    "search-insights": "^2.0.0",
+    "vue": "^3.0.0"
+  },
   "devDependencies": {
     "@algolia/client-search": "^4.23.3",
     "algoliasearch": "^4.23.3",
@@ -9,6 +31,7 @@
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "fetch-content": "node fetch-notion-content.js"
   }
 }
